// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer Snapshot Tests Spacer renders horizontal space correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
        },
        Object {
          "color": "#121212",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Example String 1
  </Text>
  <View
    style={
      Object {
        "height": undefined,
        "width": 8,
      }
    }
  />
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
        },
        Object {
          "color": "#121212",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Example String 2
  </Text>
</View>
`;

exports[`Spacer Snapshot Tests Spacer renders vertical space correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
        },
        Object {
          "color": "#121212",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Example String 1
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": undefined,
      }
    }
  />
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
        },
        Object {
          "color": "#121212",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Example String 2
  </Text>
</View>
`;
